infrastructure/k8s/auth-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth
spec:
  replicas: 1
  selector:
    matchLabels:
      name: auth-pod
  template:
    metadata:
      name: auth
      labels:
        name: auth-pod
        tier: back-end
    spec:
      containers:
        - name: stub-auth
          image: tajpouria/stub-auth
---
apiVersion: v1
kind: Service
metadata:
  name: auth-clusterip
spec:
  selector:
    name: auth-pod
  ports:
    - name: auth
      protocol: TCP
      targetPort: 4000
      port: 4000
