infrastructure/k8s/charge-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: charge 
spec:
  replicas: 1
  selector:
    matchLabels:
      name: charge-pod
  template:
    metadata:
      name: charge 
      labels:
        name: charge-pod
        tier: back-end
    spec:
      containers:
        - name: stub-charge-service
          image: tajpouria/stub-charge-service
---
apiVersion: v1
kind: Service
metadata:
  name: charge-clusterip
spec:
  selector:
    name: charge-pod
  ports:
    - name:charge 
      protocol: TCP
      targetPort: 6000
      port: 6000
