infrastructure/k8s/client-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client
spec:
  replicas: 1
  selector:
    matchLabels:
      name: client-pod
  template:
    metadata:
      name: client
      labels:
        name: client-pod
        tier: front-end
    spec:
      containers:
        - name: stub-client-service
          image: tajpouria/stub-client-service
---
apiVersion: v1
kind: Service
metadata:
  name: client-clusterip
spec:
  selector:
    name: client-pod
  ports:
    - name: client
      protocol: TCP
      targetPort: 3000
      port: 3000
