infrastructure/k8s/order-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order
spec:
  replicas: 1
  selector:
    matchLabels:
      name: order-pod
  template:
    metadata:
      name: order
      labels:
        name: order-pod
        tier: back-end
    spec:
      containers:
        - name: stub-order-service
          image: tajpouria/stub-order-service
---
apiVersion: v1
kind: Service
metadata:
  name: order-clusterip
spec:
  selector:
    name: order-pod
  ports:
    - name: order
      protocol: TCP
      targetPort: 6000
      port: 6000
