infrastructure/k8s/ticket-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ticket
spec:
  replicas: 1
  selector:
    matchLabels:
      name: ticket-pod
  template:
    metadata:
      name: ticket
      labels:
        name: ticket-pod
        tier: back-end
    spec:
      containers:
        - name: stub-ticket-service
          image: tajpouria/stub-ticket-service
---
apiVersion: v1
kind: Service
metadata:
  name: ticket-clusterip
spec:
  selector:
    name: ticket-pod
  ports:
    - name: ticket
      protocol: TCP
      targetPort: 5000
      port: 5000
