infrastructure/k8s/stub-ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: stub-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: stub.dev
      http:
        paths:
          - path: /api/auth/?(.*)
            backend:
              serviceName: auth-clusterip
              servicePort: 4000
          - path: /api/ticket/?(.*)
            backend:
              serviceName: ticket-clusterip
              servicePort: 5000
          # - path: /?(.*)
          #   backend:
          #     serviceName: client-clusterip
          #     servicePort: 3000
